Fix for open message being ackward on small screens.

--- a/_sass/_responsive-max768.scss
+++ b/_sass/_responsive-max768.scss
@@ -105,5 +105,9 @@
 	{
 	  display: none;
 	}
+	div#schedule span.open
+	{
+	  display: none;
+	}
 
 }
